   20 January 2014
If EMSCRIPTEN: define NO_C_INTERFACE NO_FILE_RENAME NO_FILE_REMOVE
NO_SYSTEM_CALL NO_LOW_LEVEL_FILE_HANDLING NO_FOPEN NO_EXIT_ON_NON_SEVERE_ERRORS


   13 December 2013
get$ now fails when trying to read invalid JSON
get$("<p",MEM,ML) now returns (p.). Before an empty string was returned.
Combined some stringpointers into one variable StaRt.
Can now read deeply nested JSON, because stack dynamically resizes. 

    4 December 2013
Bug found in scompare. Signed character comparison gave wrong sign for
variable 'teken', causing mistreatment of 8th-bit-set characters, so 
@(får:? (å|æ) ?l) failed.

    1 December 2013
Added json.c to support reading JSON files. Use JSN, e.g. 
get'("myjson.json",JSN)

   18 November
Set GLOBALARGPTR to 1. (Default: no emscripten)

   17 November 2013
Did some adaptations to make Norcroft C compiler (RiscOS) happy.
(Suffix ul on large integer, correction in otherwise unused function
swi(), removal of non-ASCII characters.)
(There is a comment containing non-ASCII characters. Those characters
must be removed to make the compiler completely happy.)

   2 October 2013
In stringEval: parameter 4 -> OPT_MEM

   26 September 2013
In doPosition, changed FLGS to Flgs in 
    if((Flgs & UNIFY) && (is_op(pat) || (FLGS & INDIRECT)))
This caused no error, just unnecessary CPU cycles.

   16 September 2013
Corrected a format specifier. Added pair of parentheses for clarity.

   13 September 2013
 @(548:@548 @) succeeded (wrong),
 @(548:@ @) failed
 @(548:@(548:548) @) succeeded (wrong)
 @(548:@(548:?) @) succeeded (wrong)
 @(548:@(548 ?) @) succeeded (wrong)
 @(548:@(548&?) @) succeeded (wrong)
 @(548:@(?:548) @) failed
 @(548:@(?:?) @) failed
The @ in front af a string is no longer removed.
Otherwise, @(548:@548 @) would succeed!

   26,27 August 2013
Changed format specifier %ld %lX etc to %lld %llx etc for Microsoft 64 bit platforms.
(long long integer type). 