@@ -5379,6 +5379,8 @@
           ( get$("<p<q",MEM,ML):(p.) (q.)
           | Out$867
           )
+          (-1*(-1+x^2)+1+-2*x+x^2|Out$868)
+          (4*(x+7)+p+-4*x|Out$869)
       &   out
         $ ( str
           $ ( "Done. "
